replaced my search form with Matt's to be in sync with js

--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
         <form>
           <input type="text" class="search-input" placeholder="Enter a city" />
           <input type="submit" class="button-searchCity" value="Search" />
+      <header>
+        <form id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city.."
+            required
+            class="search-input"
+            id="search-input"
+          />
+          <input type="submit" value="Search" class="search-button" />
         </form>
       </div>
 
