kept my original forecast block

--- a/index.html
+++ b/index.html
@@ -76,54 +76,53 @@
         </div>
       </div>
 
-      <div class="weeklyForecast">
-        <div class="forecast-column">
-          <div class="forecast-day">Sun</div>
-          <div class="forecast-icon">🌤️</div>
-          <div class="forecast-temps">
-            <span class="forecast-high">18°</span>
-            <span class="forecast-low">14°</span>
+        <div class="weeklyForecast">
+          <div class="forecast-column">
+            <div class="forecast-day">Sun</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temps">
+              <span class="forecast-high">18°</span>
+              <span class="forecast-low">14°</span>
+            </div>
+          </div>
+
+          <div class="forecast-column">
+            <div class="forecast-day">Mon</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temps">
+              <span class="forecast-high">18°</span>
+              <span class="forecast-low">14°</span>
+            </div>
+          </div>
+
+          <div class="forecast-column">
+            <div class="forecast-day">Tue</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temps">
+              <span class="forecast-high">18°</span>
+              <span class="forecast-low">14°</span>
+            </div>
+          </div>
+
+          <div class="forecast-column">
+            <div class="forecast-day">Wed</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temps">
+              <span class="forecast-high">18°</span>
+              <span class="forecast-low">14°</span>
+            </div>
+          </div>
+
+          <div class="forecast-column">
+            <div class="forecast-day">Thu</div>
+            <div class="forecast-icon">🌤️</div>
+            <div class="forecast-temps">
+              <span class="forecast-high">18°</span>
+              <span class="forecast-low">14°</span>
+            </div>
           </div>
         </div>
-
-        <div class="forecast-column">
-          <div class="forecast-day">Mon</div>
-          <div class="forecast-icon">🌤️</div>
-          <div class="forecast-temps">
-            <span class="forecast-high">18°</span>
-            <span class="forecast-low">14°</span>
-          </div>
-        </div>
-
-        <div class="forecast-column">
-          <div class="forecast-day">Tue</div>
-          <div class="forecast-icon">🌤️</div>
-          <div class="forecast-temps">
-            <span class="forecast-high">18°</span>
-            <span class="forecast-low">14°</span>
-          </div>
-        </div>
-
-        <div class="forecast-column">
-          <div class="forecast-day">Wed</div>
-          <div class="forecast-icon">🌤️</div>
-          <div class="forecast-temps">
-            <span class="forecast-high">18°</span>
-            <span class="forecast-low">14°</span>
-          </div>
-        </div>
-
-        <div class="forecast-column">
-          <div class="forecast-day">Thu</div>
-          <div class="forecast-icon">🌤️</div>
-          <div class="forecast-temps">
-            <span class="forecast-high">18°</span>
-            <span class="forecast-low">14°</span>
-          </div>
-        </div>
-      </div>
-
-      <hr />
+      </main>
 
       <footer>
         This project was coded by
