added netlify link

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         and is on
         <a href="">GitHub</a>
         and hosted on
-        <a href="">Netlify</a>
+        <a href="https://www.netlify.com">Netlify</a>
       </footer>
     </div>
   </body>
