moved imgs into src folder

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
           target="_blank"
           rel="noopener noreferrer"
         >
-          <img class="logo" alt="SheCodes Logo" src="logo.png" width="150" />
+          <img
+            class="logo"
+            alt="SheCodes Logo"
+            src="src/logo.png"
+            width="150"
+          />
         </a>
       </div>
 
