--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         and is on
         <a href="">GitHub</a>
         and hosted on
-        <a href="https://www.netlify.com">Netlify</a>
+        <a href="https://zippy-daffodil-e901be.netlify.app/">Netlify</a>
       </footer>
     </div>
   </body>
