--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         This project was coded by
         <a href="">Jenn Kanester</a>
         and is on
-        <a href="">GitHub</a>
+        <a href="https://github.com/jkanester1991">GitHub</a>
         and hosted on
         <a href="https://zippy-daffodil-e901be.netlify.app/">Netlify</a>
       </footer>
