updated link to git hub profile

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <footer>
         This project was coded by
-        <a href="">Jenn Kanester</a>
+        <a href="https://github.com/jkanester1991">Jenn Kanester</a>
         and is on
         <a href="https://github.com/jkanester1991/final-project">GitHub</a>
         and hosted on
